feat: use guava cache and virtual thread