@@ -15,6 +15,8 @@ import com.ghostchu.peerbanhelper.wrapper.PeerAddress;
 import com.github.mizosoft.methanol.FormBodyPublisher;
 import com.github.mizosoft.methanol.Methanol;
 import com.github.mizosoft.methanol.MutableRequest;
+import com.google.common.cache.Cache;
+import com.google.common.cache.CacheBuilder;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import com.google.gson.annotations.SerializedName;
@@ -45,14 +47,11 @@ public class QBittorrent extends AbstractDownloader {
     private final HttpClient httpClient;
     private final Config config;
 
-    private final Map<String, Boolean> isPrivateCacheMap = new LinkedHashMap<>(2000, 0.75f, true) {
-        @Override
-        protected boolean removeEldestEntry(Map.Entry<String, Boolean> eldest) {
-            return size() > 2000;
-        }
-    };
-    private final ExecutorService isPrivateExecutorService = Executors.newFixedThreadPool(10); // Controls the number of concurrent API requests
-    private final Semaphore isPrivateSemaphore = new Semaphore(5); // Limits the concurrent access to 5
+    private final Cache<String, Boolean> isPrivateCache = CacheBuilder.newBuilder()
+        .maximumSize(2000)
+        .build();
+    private final ExecutorService isPrivateExecutorService = Executors.newVirtualThreadPerTaskExecutor();
+    private final Semaphore isPrivateSemaphore = new Semaphore(5);
 
     public QBittorrent(String name, Config config) {
         super(name);
@@ -208,8 +207,8 @@ public class QBittorrent extends AbstractDownloader {
 
     private void checkAndSetPrivateField(QBTorrent detail) {
         String hash = detail.getHash();
-        if (isPrivateCacheMap.containsKey(hash)) {
-            Boolean isPrivate = isPrivateCacheMap.get(hash);
+        Boolean isPrivate = isPrivateCache.getIfPresent(hash);
+        if (isPrivate != null || isPrivateCache.asMap().containsKey(hash)) {
             detail.setPrivateTorrent(isPrivate);
             return;
         }
@@ -222,10 +221,8 @@ public class QBittorrent extends AbstractDownloader {
             );
             if (res.statusCode() == 200) {
                 QBTorrent newDetail = JsonUtil.getGson().fromJson(res.body(), QBTorrent.class);
-                Boolean isPrivate = newDetail.getPrivateTorrent();
-                synchronized (isPrivateCacheMap) {
-                    isPrivateCacheMap.put(hash, isPrivate);
-                }
+                isPrivate = newDetail.getPrivateTorrent();
+                isPrivateCache.put(hash, isPrivate);
                 detail.setPrivateTorrent(isPrivate);
             } else {
                 log.warn("Error fetching properties for torrent hash: {}, status: {}", hash, res.statusCode());
@@ -332,7 +329,10 @@ public class QBittorrent extends AbstractDownloader {
 
     @Override
     public void close() throws Exception {
-
+        isPrivateExecutorService.shutdown();
+        if (!isPrivateExecutorService.awaitTermination(10, TimeUnit.SECONDS)) {
+            isPrivateExecutorService.shutdownNow();
+        }
     }
 
 
